--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 /.idea
 *.csv
+/StartML/3. Deep Learning/Lesson 3 (Сверточные нейронные сети, Часть I)/Homework/Data/
+/StartML/3. Deep Learning/Lesson 4 (Сверточные нейронные сети, Часть II)/Homework/Data/
+/StartML/3. Deep Learning/Lesson 5 (Популярные архитектуры сверточных нейронных сетей, Перенос знаний)/Homework/Data/
+/StartML/3. Deep Learning/Lesson 6 (Детекция объектов)/Homework/Data/
