--- a/Pipfile
+++ b/Pipfile
@@ -4,36 +4,25 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-pandas = "*"
-seaborn = "*"
-matplotlib = "*"
-scipy = "*"
-jupyter = "*"
-numpy = "*"
-mpld3 = "*"
-imblearn = "*"
+scikit-learn = "==1.5.2"
+pandas = "==2.2"
+sqlalchemy = "==2.0"
+seaborn = "==0.13.2"
+matplotlib = "==3.9"
+jupyter = "==1.1.1"
 catboost = "*"
-dask-ml = "*"
-fastapi = "*"
-uvicorn = "*"
 psycopg2 = "*"
-requests = "*"
-transformers = "*"
-keras = "*"
-nltk = "*"
-wordcloud = "*"
-apache-airflow = "*"
-streamlit = "*"
-scikit-learn = "*"
-mlxtend = "*"
-category-encoders = "*"
-lightgbm = "*"
-openpyxl = "*"
 torch = "*"
 torchvision = "*"
-torchaudio = "*"
+scipy = "*"
+statsmodels = "*"
+pycountry = "*"
+nltk = "*"
+xgboost = "*"
+lightgmb = "*"
 
 [dev-packages]
 
 [requires]
 python_version = "3.10"
+python_full_version = "3.10.11"
